feat: Add Final Review Checklist to all concept pages
- Added '✅ Final Review Checklist' section to all 10 concept HTML files
- Each checklist includes 5 critical verification items:
  * Icon positioning and visibility
  * Animation timing and sequencing
  * Label and text clarity
  * Export settings (MP4, HD resolution)
  * Smooth looping verification
- Updated gemini.md to document 6-part structure (was 5-part)
- Updated 02_canva_animation_guide.md with comprehensive checklist
- Updated 01_end_to_end_workflow.md to include review step
- Updated 05_add_new_concept_guide.md with checklist instructions
- Updated copilot-instructions.md to reflect new 6-part structure
- Interactive checklists help ensure quality before export

--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -77,7 +77,22 @@
                     <li><strong>Step 2: Create Main Branch.</strong> Use the "Line" element to draw a straight horizontal line. Add small circles on top for commits. Group them together.</li>
                     <li><strong>Step 3: Animate Branching.</strong> Draw a new dashed line that starts from the main line and goes upwards at an angle.</li>
                     <li><strong>Step 4: Adjust Timing.</strong> Use the timeline to make the `Wipe` animation happen first, followed by the `Pop` animations for the new commits.</li>
-                    <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+                                <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+        </ul>
+
+        <!-- Part 5: Final Review Checklist -->
+        <h2>✅ Final Review Checklist</h2>
+        <p>Before downloading your animation, verify these elements are in place:</p>
+        <ul class="checklist">
+            <li>Icons are correctly positioned and visible throughout the animation</li>
+            <li>Animations are timed and sequenced properly (check timeline view)</li>
+            <li>Labels and text are clear and readable at video resolution</li>
+            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
+            <li>Animation loops smoothly if intended for continuous playback</li>
+        </ul>
+            </div>
+        </div>
+    </main>
                 </ul>
             </div>
         </div>
