--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -135,7 +135,22 @@
                     <li><strong>Step 3: Animate the container.</strong> Click on the shipping container icon you added.</li>
                     <li><strong>Step 4: Animate the app icons.</strong> Hold the `Shift` key and click on your app logo and all dependency icons to select them all at once.</li>
                     <li><strong>Step 5: Adjust timing.</strong> At the bottom of the editor, click the "Show timing" button (or it may already be visible).</li>
-                    <li><strong>Step 6: Download.</strong> Click "Share" (top right) → "Download". Choose "MP4 Video" as the file type and click "Download".</li>
+                                <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+        </ul>
+
+        <!-- Part 5: Final Review Checklist -->
+        <h2>✅ Final Review Checklist</h2>
+        <p>Before downloading your animation, verify these elements are in place:</p>
+        <ul class="checklist">
+            <li>Icons are correctly positioned and visible throughout the animation</li>
+            <li>Animations are timed and sequenced properly (check timeline view)</li>
+            <li>Labels and text are clear and readable at video resolution</li>
+            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
+            <li>Animation loops smoothly if intended for continuous playback</li>
+        </ul>
+            </div>
+        </div>
+    </main>
                 </ul>
 
             </div>
