--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -73,7 +73,22 @@
                     <li><strong>Step 2: Add Icons & Arrows.</strong> Go to "Elements" and search for "code brackets", "gear", "checkmark", and "rocket ship". Place them in order from left to right. Search for "arrow" and place arrows between them.</li>
                     <li><strong>Step 3: Animate the Flow.</strong> Click the first arrow. Select "Animate" > <strong>"Wipe"</strong>. Adjust the direction to match the flow.</li>
                     <li><strong>Step 4: Adjust Timing.</strong> Open the timeline by clicking "Show timing".</li>
-                    <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+                                <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+        </ul>
+
+        <!-- Part 5: Final Review Checklist -->
+        <h2>✅ Final Review Checklist</h2>
+        <p>Before downloading your animation, verify these elements are in place:</p>
+        <ul class="checklist">
+            <li>Icons are correctly positioned and visible throughout the animation</li>
+            <li>Animations are timed and sequenced properly (check timeline view)</li>
+            <li>Labels and text are clear and readable at video resolution</li>
+            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
+            <li>Animation loops smoothly if intended for continuous playback</li>
+        </ul>
+            </div>
+        </div>
+    </main>
                 </ul>
             </div>
         </div>
