--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -101,7 +101,18 @@
             </li>
             <li><strong>Step 5: Adjust Timing.</strong> Open the timeline. Sequence the animations: Laptop Envelope Drift -> Server Pulse -> Server Envelope Drift.</li>
                 <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
-            </ul>
+        </ul>
+
+        <!-- Part 5: Final Review Checklist -->
+        <h2>✅ Final Review Checklist</h2>
+        <p>Before downloading your animation, verify these elements are in place:</p>
+        <ul class="checklist">
+            <li>Icons are correctly positioned and visible throughout the animation</li>
+            <li>Animations are timed and sequenced properly (check timeline view)</li>
+            <li>Labels and text are clear and readable at video resolution</li>
+            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
+            <li>Animation loops smoothly if intended for continuous playback</li>
+        </ul>
             </div>
         </div>
     </main>
