feat: Add Timeline & Timing Guides to multiple concept pages

--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -76,12 +76,29 @@
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
         <ol>
-            <li><strong>Nodes:</strong> Create large squares to represent Nodes.</li>
-            <li><strong>Pods:</strong> Create smaller circles to represent Pods.</li>
-            <li><strong>Scheduling:</strong> Animate the Pod circles floating down and landing inside the Node squares using the <strong>"Drift"</strong> animation.</li>
+            <li><strong>Pod Container:</strong> Add a rounded rectangle to represent the Pod boundary.</li>
+            <li><strong>Containers:</strong> Add smaller icons inside for App Container and Sidecar.</li>
+            <li><strong>Build Animation:</strong> Use <strong>"Rise"</strong> to show containers appearing inside the Pod.</li>
+            <li><strong>Labels:</strong> Add text labels for "Pod", "App", and "Sidecar".</li>
         </ol>
 
-        <!-- Part 4: Process in Detail -->
+        <!-- Timeline & Timing Guide -->
+        <div class="alert alert-warning bg-dark border-warning mt-4">
+            <h4>⏱️ Timeline & Timing Guide</h4>
+            <p><strong>Total Duration:</strong> 6-8 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+            <div class="mt-3">
+                <h6>Recommended Timeline Sequence:</h6>
+                <ul>
+                    <li><strong>0-2s:</strong> Pod boundary appears (Rise animation, 1.5s duration)</li>
+                    <li><strong>2-4s:</strong> App container appears inside pod (Pop animation, 1.5s duration)</li>
+                    <li><strong>4-6s:</strong> Sidecar container appears (Pop animation, 1.5s duration)</li>
+                    <li><strong>6-8s:</strong> Labels appear (Fade-in or Pop, 0.5s each, staggered)</li>
+                </ul>
+                <p class="mt-2"><em>💡 Tip: Keep containers inside pod boundary. Ensure pod appears first, then containers populate it sequentially.</em></p>
+            </div>
+        </div>
+
+        <!-- Part 4: Process in Detail -->        <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
             <h4>🔍 Asset Search Prompts</h4>
