--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -68,13 +68,30 @@
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
         <ol>
-            <li><strong>Icons:</strong> Add an icon for a `.env` file and another for a Docker container.</li>
-            <li><strong>Placeholder:</strong> Inside the container icon, add placeholder text like `[DATABASE_URL]`.</li>
-            <li><strong>Injection:</strong> Animate a line of text (the actual secret value) <strong>"Drifting"</strong> from the `.env` file to the container.</li>
-            <li><strong>Replacement:</strong> As the value arrives, make the placeholder text <strong>"Fade"</strong> out and the new value <strong>"Fade"</strong> in.</li>
+            <li><strong>Code File:</strong> Add a document icon representing the application code.</li>
+            <li><strong>Environment File:</strong> Add a separate icon for the .env file.</li>
+            <li><strong>Flow Animation:</strong> Use <strong>"Drift"</strong> to show variables flowing from .env to the code.</li>
+            <li><strong>Labels:</strong> Show example variables like "API_KEY" and "DB_PASSWORD".</li>
         </ol>
 
-        <!-- Part 4: Process in Detail -->
+        <!-- Timeline & Timing Guide -->
+        <div class="alert alert-warning bg-dark border-warning mt-4">
+            <h4>⏱️ Timeline & Timing Guide</h4>
+            <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+            <div class="mt-3">
+                <h6>Recommended Timeline Sequence:</h6>
+                <ul>
+                    <li><strong>0-2s:</strong> Code file appears on right (Rise animation, 1.5s duration)</li>
+                    <li><strong>2-4s:</strong> .env file appears on left (Rise animation, 1.5s duration)</li>
+                    <li><strong>4-6s:</strong> First variable (API_KEY) drifts from .env to code (Drift animation, 2s duration)</li>
+                    <li><strong>6-8s:</strong> Second variable (DB_PASSWORD) drifts (Drift animation, 2s duration)</li>
+                    <li><strong>8-10s:</strong> Code file pulses showing variables loaded (Pulse animation, 1.5s duration)</li>
+                </ul>
+                <p class="mt-2"><em>💡 Tip: Stagger variable animations by 2s. Show .env file first, then variables flow to code sequentially.</em></p>
+            </div>
+        </div>
+
+        <!-- Part 4: Process in Detail -->        <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
             <h4>🔍 Asset Search Prompts</h4>
