--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -119,6 +119,23 @@
                     <li><strong>Timing:</strong> Use the timeline to ensure the packaging happens *after* the container arrives.</li>
                 </ol>
 
+                <!-- Timeline & Timing Guide -->
+                <div class="alert alert-warning bg-dark border-warning mt-4">
+                    <h4>⏱️ Timeline & Timing Guide</h4>
+                    <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                    <div class="mt-3">
+                        <h6>Recommended Timeline Sequence:</h6>
+                        <ul>
+                            <li><strong>0-2s:</strong> Host OS base appears (Rise animation, 1.5s duration)</li>
+                            <li><strong>2-4s:</strong> Container outer layer appears (Rise animation, 1.5s duration)</li>
+                            <li><strong>4-6s:</strong> Runtime layer appears inside (Pop animation, 1s duration)</li>
+                            <li><strong>6-8s:</strong> Dependencies appear (Pop animation, 1s duration)</li>
+                            <li><strong>8-10s:</strong> App Code appears on top (Pop animation, 1s duration)</li>
+                        </ul>
+                        <p class="mt-2"><em>💡 Tip: Drag the animation bars in the timeline to adjust start times. Each bar should start when the previous one ends for smooth sequential flow.</em></p>
+                    </div>
+                </div>
+
                 <!-- Part 4: Process in Detail -->
                 <h2>🖱️ Process in Detail</h2>
                 <div class="copy-container">
