--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -58,6 +58,25 @@
                     <li><strong>Animation:</strong> Animate each step: use <strong>"Wipe"</strong> for the arrows, <strong>"Spin"</strong> for the gear, and <strong>"Rise"</strong> for the rocket.</li>
                     <li><strong>Timing:</strong> Use the timeline to trigger each animation one after the other to show the progression.</li>
                 </ol>
+
+                <!-- Timeline & Timing Guide -->
+                <div class="alert alert-warning bg-dark border-warning mt-4">
+                    <h4>⏱️ Timeline & Timing Guide</h4>
+                    <p><strong>Total Duration:</strong> 10-12 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                    <div class="mt-3">
+                        <h6>Recommended Timeline Sequence:</h6>
+                        <ul>
+                            <li><strong>0-2s:</strong> Code stage highlights (Pulse animation, 2s duration)</li>
+                            <li><strong>2-4s:</strong> Arrow/transition to Build (Wipe animation, 1.5s duration)</li>
+                            <li><strong>4-6s:</strong> Build stage highlights (Pulse animation, 2s duration)</li>
+                            <li><strong>6-8s:</strong> Arrow/transition to Test (Wipe animation, 1.5s duration)</li>
+                            <li><strong>8-10s:</strong> Test stage highlights (Pulse animation, 2s duration)</li>
+                            <li><strong>10-12s:</strong> Deploy stage highlights (Pulse animation, 2s duration)</li>
+                        </ul>
+                        <p class="mt-2"><em>💡 Tip: Overlap animations slightly (0.5s) for smoother transitions. In timeline, drag bars to start before previous one ends.</em></p>
+                    </div>
+                </div>
+
                 <!-- Part 4: Process in Detail -->
                 <h2>🖱️ Process in Detail</h2>
                 <div class="copy-container">
