--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -73,6 +73,22 @@
             <li><strong>Response:</strong> Animate a different colored envelope traveling back from the server to the laptop.</li>
         </ol>
 
+        <!-- Timeline & Timing Guide -->
+        <div class="alert alert-warning bg-dark border-warning mt-4">
+            <h4>⏱️ Timeline & Timing Guide</h4>
+            <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+            <div class="mt-3">
+                <h6>Recommended Timeline Sequence:</h6>
+                <ul>
+                    <li><strong>0-3s:</strong> Request envelope drifts to server (Drift animation, 2.5s duration, blue envelope)</li>
+                    <li><strong>3-5s:</strong> Server processes request (Pulse animation, 1.5s duration)</li>
+                    <li><strong>5-8s:</strong> Response envelope drifts back to client (Drift animation, 2.5s duration, green envelope)</li>
+                    <li><strong>8-10s:</strong> Optional: Client receives (subtle Pulse, 1s duration)</li>
+                </ul>
+                <p class="mt-2"><em>💡 Tip: Color-code envelopes (blue=request, green=response). Ensure second envelope starts after server pulse ends.</em></p>
+            </div>
+        </div>
+
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
