--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -62,6 +62,25 @@
                     <li><strong>Commits:</strong> Have new commit circles appear on the feature branch using the <strong>"Pop"</strong> animation.</li>
                     <li><strong>Merge:</strong> Animate the feature branch line merging back into the main line.</li>
                 </ol>
+
+                <!-- Timeline & Timing Guide -->
+                <div class="alert alert-warning bg-dark border-warning mt-4">
+                    <h4>⏱️ Timeline & Timing Guide</h4>
+                    <p><strong>Total Duration:</strong> 12-15 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                    <div class="mt-3">
+                        <h6>Recommended Timeline Sequence:</h6>
+                        <ul>
+                            <li><strong>0-3s:</strong> Main branch line appears (Wipe animation, 2s duration)</li>
+                            <li><strong>3-5s:</strong> Initial commit dots on main (Pop animation, 0.5s each, staggered)</li>
+                            <li><strong>5-7s:</strong> Feature branch diverges (Wipe animation, 1.5s duration)</li>
+                            <li><strong>7-10s:</strong> Commit dots appear on feature branch (Pop animation, 0.5s each, staggered)</li>
+                            <li><strong>10-12s:</strong> More commits on main branch (Pop animation, 0.5s each)</li>
+                            <li><strong>12-15s:</strong> Merge line connects back to main (Wipe animation, 2s duration)</li>
+                        </ul>
+                        <p class="mt-2"><em>💡 Tip: Stagger commit dots by 0.5s each. In timeline, offset each Pop animation slightly from the previous one.</em></p>
+                    </div>
+                </div>
+
                 <!-- Part 4: Process in Detail -->
                 <h2>🖱️ Process in Detail</h2>
                 <div class="copy-container">
