--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -76,29 +76,12 @@
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
         <ol>
-            <li><strong>Pod Container:</strong> Add a rounded rectangle to represent the Pod boundary.</li>
-            <li><strong>Containers:</strong> Add smaller icons inside for App Container and Sidecar.</li>
-            <li><strong>Build Animation:</strong> Use <strong>"Rise"</strong> to show containers appearing inside the Pod.</li>
-            <li><strong>Labels:</strong> Add text labels for "Pod", "App", and "Sidecar".</li>
+            <li><strong>Nodes:</strong> Create large squares to represent Nodes.</li>
+            <li><strong>Pods:</strong> Create smaller circles to represent Pods.</li>
+            <li><strong>Scheduling:</strong> Animate the Pod circles floating down and landing inside the Node squares using the <strong>"Drift"</strong> animation.</li>
         </ol>
 
-        <!-- Timeline & Timing Guide -->
-        <div class="alert alert-warning bg-dark border-warning mt-4">
-            <h4>⏱️ Timeline & Timing Guide</h4>
-            <p><strong>Total Duration:</strong> 6-8 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
-            <div class="mt-3">
-                <h6>Recommended Timeline Sequence:</h6>
-                <ul>
-                    <li><strong>0-2s:</strong> Pod boundary appears (Rise animation, 1.5s duration)</li>
-                    <li><strong>2-4s:</strong> App container appears inside pod (Pop animation, 1.5s duration)</li>
-                    <li><strong>4-6s:</strong> Sidecar container appears (Pop animation, 1.5s duration)</li>
-                    <li><strong>6-8s:</strong> Labels appear (Fade-in or Pop, 0.5s each, staggered)</li>
-                </ul>
-                <p class="mt-2"><em>💡 Tip: Keep containers inside pod boundary. Ensure pod appears first, then containers populate it sequentially.</em></p>
-            </div>
-        </div>
-
-        <!-- Part 4: Process in Detail -->        <!-- Part 4: Process in Detail -->
+        <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
             <h4>🔍 Asset Search Prompts</h4>
@@ -122,18 +105,7 @@
             </li>
             <li><strong>Step 5: Adjust Timing.</strong> Use the timeline to stagger the animations so the pods appear to be scheduled one after another.</li>
             <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
-        </ul>
-
-        <!-- Part 5: Final Review Checklist -->
-        <h2>✅ Final Review Checklist</h2>
-        <p>Before downloading your animation, verify these elements are in place:</p>
-        <ul class="checklist">
-            <li>Icons are correctly positioned and visible throughout the animation</li>
-            <li>Animations are timed and sequenced properly (check timeline view)</li>
-            <li>Labels and text are clear and readable at video resolution</li>
-            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
-            <li>Animation loops smoothly if intended for continuous playback</li>
-        </ul>
+            </ul>
             </div>
         </div>
     </main>
