--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -64,30 +64,13 @@
         <!-- Part 3: Steps in Canva -->
         <h2>📝 Steps in Canva</h2>
         <ol>
-            <li><strong>Nested Boxes:</strong> Create concentric rectangles for Content, Padding, Border, Margin.</li>
-            <li><strong>Build Animation:</strong> Use <strong>"Rise"</strong> or <strong>"Wipe"</strong> to reveal layers from inside out.</li>
-            <li><strong>Color Coding:</strong> Use different colors for each layer for clarity.</li>
-            <li><strong>Labels:</strong> Add text labels identifying each layer.</li>
+            <li><strong>Content:</strong> Start with a box in the center for the Content.</li>
+            <li><strong>Padding:</strong> Animate a second box appearing around it using <strong>"Breathe"</strong>.</li>
+            <li><strong>Border:</strong> Animate a third box appearing with <strong>"Wipe"</strong>.</li>
+            <li><strong>Margin:</strong> Animate the final outer box with <strong>"Fade"</strong>.</li>
         </ol>
 
-        <!-- Timeline & Timing Guide -->
-        <div class="alert alert-warning bg-dark border-warning mt-4">
-            <h4>⏱️ Timeline & Timing Guide</h4>
-            <p><strong>Total Duration:</strong> 10-12 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
-            <div class="mt-3">
-                <h6>Recommended Timeline Sequence:</h6>
-                <ul>
-                    <li><strong>0-2s:</strong> Content box appears (Rise animation, 1.5s duration, innermost)</li>
-                    <li><strong>2-4s:</strong> Padding layer appears around content (Wipe animation, 1.5s duration)</li>
-                    <li><strong>4-6s:</strong> Border layer appears (Wipe animation, 1.5s duration)</li>
-                    <li><strong>6-8s:</strong> Margin layer appears (Wipe animation, 1.5s duration, outermost)</li>
-                    <li><strong>8-12s:</strong> Labels appear for each layer (Pop animation, 0.5s each, staggered)</li>
-                </ul>
-                <p class="mt-2"><em>💡 Tip: Color-code layers (e.g., blue=content, green=padding, yellow=border, transparent=margin). Animate from center outward.</em></p>
-            </div>
-        </div>
-
-        <!-- Part 4: Process in Detail -->        <!-- Part 4: Process in Detail -->
+        <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
             <h4>🔍 Asset Search Prompts</h4>
@@ -108,19 +91,8 @@
                 </ul>
             </li>
             <li><strong>Step 4: Adjust Timing.</strong> Open the timeline. Stagger the animations so the Content appears first, then Padding, then Border, then Margin.</li>
-            <li><strong>Step 6: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
-        </ul>
-
-        <!-- Part 5: Final Review Checklist -->
-        <h2>✅ Final Review Checklist</h2>
-        <p>Before downloading your animation, verify these elements are in place:</p>
-        <ul class="checklist">
-            <li>Icons are correctly positioned and visible throughout the animation</li>
-            <li>Animations are timed and sequenced properly (check timeline view)</li>
-            <li>Labels and text are clear and readable at video resolution</li>
-            <li>Export settings are correct (MP4 Video, HD resolution: 1920x1080)</li>
-            <li>Animation loops smoothly if intended for continuous playback</li>
-        </ul>
+            <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
+            </ul>
             </div>
         </div>
     </main>
