feat: Add collapsible animation section with YouTube link for Git Branching concept

--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -53,7 +53,24 @@
                 <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/2eL-d4-zU6Y" title="Introduction to Git - Branching and Merging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                <!-- Part 2: Animation Idea (Collapsible) -->
+                <div class="animation-section">
+                    <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-3" aria-expanded="false" aria-controls="animation-3">
+                        🎬 Animation Idea
+                        <span class="toggle-icon">▼</span>
+                    </button>
+                    <div class="collapse" id="animation-3">
+                        <div class="animation-content">
+                            <p>This animation provides a clear visual of how a new line of development is created from a specific point in the project's history, and then merged back in.</p>
+                            <p><a href="https://www.youtube.com/watch?v=2eL-d4-zU6Y" target="_blank" rel="noopener noreferrer">Watch on YouTube</a></p>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/2eL-d4-zU6Y" title="Introduction to Git - Branching and Merging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <!-- Part 3: Steps in Canva -->
                 <h2>📝 Steps in Canva</h2>
                 <ol>
