feat: Implement collapsible animation sections with YouTube links for Docker and CI/CD concepts

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -103,11 +103,21 @@
                     <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
                 </div>
 
-                <!-- Part 2: Animation Idea -->
-                <h2>🎬 Animation Idea</h2>
-                <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <!-- Part 2: Animation Idea (Collapsible) -->
+                <div class="animation-section">
+                    <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-1" aria-expanded="false" aria-controls="animation-1">
+                        🎬 Animation Idea
+                        <span class="toggle-icon">▼</span>
+                    </button>
+                    <div class="collapse" id="animation-1">
+                        <div class="animation-content">
+                            <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
+                            <p><a href="https://www.youtube.com/watch?v=Gjnup-PuquQ" target="_blank" rel="noopener noreferrer">Watch on YouTube</a></p>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/Gjnup-PuquQ" title="Docker in 100 Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Part 3: Steps in Canva -->
