--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -44,12 +44,24 @@
                 <div id="image-prompt-2">
                     <p>As a video production assistant creating assets for an online video course, generate minimalist tech icons for a flowchart: code brackets, a gear, a checkmark, and a rocket ship. The style should be simple, clean, vector, and easy to understand in an educational animation.</p>
                 </div>
-                <!-- Part 2: Animation Idea -->
-                <h2>🎬 Animation Idea</h2>
-                <p>This animation transforms a static flowchart into a dynamic process, showing the automated, sequential flow of code moving toward production.</p>
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/fT2Wp3f_k3Y" title="What is CI/CD?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                <!-- Part 2: Animation Idea (Collapsible) -->
+                <div class="animation-section">
+                    <button class="animation-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#animation-2" aria-expanded="false" aria-controls="animation-2">
+                        🎬 Animation Idea
+                        <span class="toggle-icon">▼</span>
+                    </button>
+                    <div class="collapse" id="animation-2">
+                        <div class="animation-content">
+                            <p>This animation transforms a static flowchart into a dynamic process, showing the automated, sequential flow of code moving toward production.</p>
+                            <p><a href="https://www.youtube.com/watch?v=fT2Wp3f_k3Y" target="_blank" rel="noopener noreferrer">Watch on YouTube</a></p>
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/fT2Wp3f_k3Y" title="What is CI/CD?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <!-- Part 3: Steps in Canva -->
                 <h2>📝 Steps in Canva</h2>
                 <ol>
