feat: Add Timeline & Timing Guide for Git Branching animation

--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -74,6 +74,23 @@
                     <li><strong>Commits:</strong> Have new commit circles appear on the feature branch using the <strong>"Pop"</strong> animation.</li>
                     <li><strong>Merge:</strong> Animate the feature branch line merging back into the main line.</li>
                 </ol>
+                    <!-- Timeline & Timing Guide -->
+                    <div class="alert alert-warning bg-dark border-warning mt-4">
+                        <h4> Timeline & Timing Guide</h4>
+                        <p><strong>Total Duration:</strong> 12-14 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                        <div class="mt-3">
+                            <h6>Recommended Timeline Sequence:</h6>
+                            <ul>
+                                <li><strong>0s:</strong> Main branch line and first commit appear (<em>Wipe</em>).</li>
+                                <li><strong>2s:</strong> Feature branch splits off (<em>Wipe</em>).</li>
+                                <li><strong>4s:</strong> Feature branch commits pop in (<em>Pop</em>).</li>
+                                <li><strong>8s:</strong> Main branch gets a new commit (<em>Pop</em>).</li>
+                                <li><strong>10s:</strong> Feature branch merges back (<em>Wipe</em>).</li>
+                                <li><strong>12s:</strong> All lines fade out (<em>Fade</em>).</li>
+                            </ul>
+                            <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to drag and sequence each animation layer. Preview the animation to ensure smooth transitions and clear visual flow.</p>
+                        </div>
+                    </div>
                 <!-- Part 4: Process in Detail -->
                 <h2>🖱️ Process in Detail</h2>
                 <div class="copy-container">
