feat: Add Timeline & Timing Guide sections for various animation concepts

--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -72,6 +72,22 @@
             <li><strong>Task:</strong> Create a small block representing the async task.</li>
             <li><strong>Journey:</strong> Animate the task block moving from the Call Stack to the Web API, then to the Callback Queue, and finally back to the Call Stack using <strong>"Drift"</strong>.</li>
         </ol>
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 10-12 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> All boxes appear (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Async task block moves from Call Stack to Web API (<em>Drift</em>).</li>
+                        <li><strong>5s:</strong> Task moves to Callback Queue (<em>Drift</em>).</li>
+                        <li><strong>8s:</strong> Callback moves from Queue to Call Stack (<em>Drift</em>).</li>
+                        <li><strong>10s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
