--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -72,6 +72,22 @@
             <li><strong>Processing:</strong> Make the server icon <strong>"Pulse"</strong> once to show it's working.</li>
             <li><strong>Response:</strong> Animate a different colored envelope traveling back from the server to the laptop.</li>
         </ol>
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> Client and Server icons appear (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Envelope (Request) drifts from Client to Server (<em>Drift</em>).</li>
+                        <li><strong>4s:</strong> Server pulses (<em>Pulse</em>).</li>
+                        <li><strong>6s:</strong> Envelope (Response) drifts back to Client (<em>Drift</em>).</li>
+                        <li><strong>8s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
