--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -81,6 +81,22 @@
             <li><strong>Scheduling:</strong> Animate the Pod circles floating down and landing inside the Node squares using the <strong>"Drift"</strong> animation.</li>
         </ol>
 
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 10-12 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> Nodes and Pods appear (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Pods pop into Nodes (<em>Pop</em>).</li>
+                        <li><strong>5s:</strong> Control Plane schedules Pods (<em>Drift</em>).</li>
+                        <li><strong>8s:</strong> All elements wipe in (<em>Wipe</em>).</li>
+                        <li><strong>10s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
         <div class="copy-container">
