--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -69,6 +69,22 @@
             <li><strong>Border:</strong> Animate a third box appearing with <strong>"Wipe"</strong>.</li>
             <li><strong>Margin:</strong> Animate the final outer box with <strong>"Fade"</strong>.</li>
         </ol>
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> Content box appears (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Padding box breathes in (<em>Breathe</em>).</li>
+                        <li><strong>4s:</strong> Border box wipes in (<em>Wipe</em>).</li>
+                        <li><strong>6s:</strong> Margin box fades in (<em>Fade</em>).</li>
+                        <li><strong>8s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
