--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -73,6 +73,21 @@
             <li><strong>Injection:</strong> Animate a line of text (the actual secret value) <strong>"Drifting"</strong> from the `.env` file to the container.</li>
             <li><strong>Replacement:</strong> As the value arrives, make the placeholder text <strong>"Fade"</strong> out and the new value <strong>"Fade"</strong> in.</li>
         </ol>
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 8-10 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> .env and container icons appear (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Secret value drifts from .env to container (<em>Drift</em>).</li>
+                        <li><strong>5s:</strong> Placeholder text fades out, new value fades in (<em>Fade</em>).</li>
+                        <li><strong>8s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
 
         <!-- Part 4: Process in Detail -->
         <h2>🖱️ Process in Detail</h2>
