--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -75,6 +75,22 @@
             <li><strong>Pulse:</strong> Make the application icon <strong>"Pulse"</strong> as it gets scraped.</li>
             <li><strong>Return:</strong> Animate the magnifying glass returning to Prometheus, now carrying a small chart icon with it.</li>
         </ol>
+            <!-- Timeline & Timing Guide -->
+            <div class="alert alert-warning bg-dark border-warning mt-4">
+                <h4> Timeline & Timing Guide</h4>
+                <p><strong>Total Duration:</strong> 12-14 seconds | <strong>How to Access:</strong> Click "Show timing" at bottom of Canva editor</p>
+                <div class="mt-3">
+                    <h6>Recommended Timeline Sequence:</h6>
+                    <ul>
+                        <li><strong>0s:</strong> Prometheus and app icons appear (<em>Fade</em>).</li>
+                        <li><strong>2s:</strong> Magnifying glass drifts to first app (<em>Drift</em>).</li>
+                        <li><strong>5s:</strong> App pulses as it gets scraped (<em>Pulse</em>).</li>
+                        <li><strong>8s:</strong> Magnifying glass returns to Prometheus with chart (<em>Drift</em>).</li>
+                        <li><strong>12s:</strong> All elements fade out (<em>Fade</em>).</li>
+                    </ul>
+                    <p class="mt-2"><strong>Tip:</strong> Use Canva's timeline to sequence each animation layer for smooth transitions and clear visual flow.</p>
+                </div>
+            </div>
 
         <!-- Timeline & Timing Guide -->
         <div class="alert alert-warning bg-dark border-warning mt-4">
